--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -181,28 +181,7 @@
         </div>
         <div class="col-md-9">
           <!--<div class="navbar-collapse collapse" id="navbarNavDropdown" style>-->
-            <ul class="navbar-nav ml-auto">
-              <li>
-                <%= link_to new_restaurant_registration_path, class:"nav-link2 text-right" do %>
-                  <p class="p_2">お問合せ</p>
-                <% end %>
-              </li>
-              <li>
-                <%= link_to new_admin_session_path, class:"nav-link2 text-right" do %>
-                  <p class="p_2">利用規約</p>
-                <% end %>
-              </li>
-              <li>
-                <%= link_to new_restaurant_registration_path, class:"nav-link2 text-right" do %>
-                  <p class="p_2">プライバシーポリシー</p>
-                <% end %>
-              </li>
-              <li>
-                <%= link_to new_restaurant_registration_path, class:"nav-link2 text-right" do %>
-                  <p class="p_2">運営者情報</p>
-                <% end %>
-              </li>
-            </ul>
+          <p class="text-center">©2022 Enme</p>
         </div>
       </div>
     </footer>
