--- a/app/views/restaurant/menus/new.html.erb
+++ b/app/views/restaurant/menus/new.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class='col-10 offset-2'>
       <div class="row">
-        <h4 class="col-3 mt-5">メニュー新規登録</h4>
+        <h4 class="col-md-3 mt-5">メニュー新規登録</h4>
       </div>
 
       <% if @menu.errors.any? %>
@@ -47,9 +47,9 @@
           <%= f.text_area :introduction, size: "20x7", class: "col-md-6" %>
         </div>
 
-        <div class="actions2 mt-4 offset-4">
+        <div class="actions2 mt-4 offset-md-4">
           <%#= f.submit '新規登録', class:"btn btn-success col-2" %>
-          <%= button_tag type: :submit, class: "btn btn-success active mx-auto" do %>
+          <%= button_tag type: :submit, class: "btn btn-success active" do %>
             <i class="fas fa-utensils mr-2"></i>新規登録
           <% end %>
         </div>
