--- a/app/views/restaurant/menus/show.html.erb
+++ b/app/views/restaurant/menus/show.html.erb
@@ -1,12 +1,12 @@
 <div class="container">
   <div class="row">
     <div class="col-12">
-      <div class='flashing mt-5 offset-2'>
+      <div class='flashing mt-5 offset-md-2'>
         <p>※現在登録されているデータは架空です</p>
       </div>
 
       <div class="row mt-5">
-        <div class="col-5 mt-5 text-center">
+        <div class="col-md-5 mt-5 text-center">
           <div class="menu_image">
             <% if @menu.image.attached? %>
               <%= image_tag @menu.get_image(200,200) %>
@@ -16,7 +16,7 @@
           </div>
         </div>
 
-        <div class="col-7 mt-5 item_show">
+        <div class="col-md-7 mt-5 item_show">
           <h5><strong><%= @menu.name %></strong></h5>
           <div class="mt-3"><%= @menu.introduction %></div>
           <div class="mt-3">
@@ -27,12 +27,12 @@
           </div>
             <!--<th>税込価格</th>-->
           <div class="mt-5"><span>税抜価格（税込価格）</span><br><strong class="price"><%= "#{@menu.price}円" %>(<%= "#{@menu.with_tax_price}円" %>)　</strong></div>
-          <div class="mt-5">
-            <%= link_to edit_restaurant_restaurant_menu_path(@menu), class:"btn btn-info active" do %>
+          <div>
+            <%= link_to edit_restaurant_restaurant_menu_path(@menu), class:"btn btn-info active mt-5" do %>
               <i class="fas fa-pen-nib"></i>
               編集する
             <% end %>
-            <%= link_to restaurant_restaurant_menu_path(@restaurant, @menu), method: :delete,  class:"btn btn-danger active ml-5" do %>
+            <%= link_to restaurant_restaurant_menu_path(@restaurant, @menu), method: :delete,  class:"btn btn-danger active ml-md-5 mt-5" do %>
               <i class="fas fa-trash"></i>
               削除する
             <% end %>
