Change view of restaurant

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -59,6 +59,10 @@ th {
   background-position:center;
 }
 
+.navbar-toggler{
+  background-color: #000000;
+}
+
 .wrapper{
   min-height: 100vh;
   position: relative;
