--- a/app/views/restaurant/homes/edit.html.erb
+++ b/app/views/restaurant/homes/edit.html.erb
@@ -80,7 +80,7 @@
 
           <div class="row field d-grid text-center mt-4">
             <%= f.label :News, class: "col-md-3 text-left" %>
-            <%= f.text_area :news, autofocus: true, required: true, class: "col-md-8" %>
+            <%= f.text_area :news, autofocus: true, class: "col-md-8" %>
           </div>
 
           <div class="row field d-grid offset-md-3">
