--- a/app/views/restaurant/menus/index.html.erb
+++ b/app/views/restaurant/menus/index.html.erb
@@ -28,6 +28,9 @@
             </p>
             <p class ="p_1"><%= link_to menu.name, restaurant_restaurant_menu_path(@restaurant, menu) %></p>
             <p class ="p_1"><%= "¥#{menu.price}" %></p>
+            <% menu.allergies.each do |e| %>
+              <td><%= e.allergen %></td>
+            <% end %>
             </div>
           <% end %>
         </div>
