--- a/app/views/customer/homes/about.html.erb
+++ b/app/views/customer/homes/about.html.erb
@@ -79,3 +79,13 @@
       </div>
     </div>
   </div>
+
+<script>
+
+  $(document).on('turbolinks:load',function(){
+
+    window.addEventListener('pageshow',()=>{
+    	if(window.performance.navigation.type==2) location.reload();
+    });
+  });
+</script>
