--- a/app/views/customer/restaurants/search.html.erb
+++ b/app/views/customer/restaurants/search.html.erb
@@ -19,13 +19,13 @@
 
           <div class="row field d-grid text-center mt-3">
             <%= f.label :住所（都道府県）, class: "col-md-4 text-left" %>
-            <%= f.collection_select :state_id , State.all,:id,:state %>
+            <%= f.collection_select :state_id , State.all,:id,:state, {selected: 1} %>
           </div>
 
           <div class="row field d-grid text-center mt-3">
             <%= f.label :住所（地域エリア）, class: "col-md-4 text-left" %>
             <div id="areas_select" >
-              <%= render partial: 'shared/areas', locals: { areas: Area.all } %>
+              <%= render partial: 'shared/areas', locals: { areas: Area.where(state_id: 1) } %>
             </div>
           </div>
 
@@ -57,3 +57,11 @@
     </div>
   </div>
 </div>
+
+<script>
+  $(document).on('turbolinks:load',function(){
+    window.addEventListener('pageshow',()=>{
+    	if(window.performance.navigation.type==2) location.reload();
+    });
+  });
+</script>
