--- a/app/views/customer/registrations/new.html.erb
+++ b/app/views/customer/registrations/new.html.erb
@@ -30,13 +30,13 @@
 
         <div class="row field d-grid text-center mt-3">
           <%= f.label :住所（都道府県）, class: "col-md-4 text-left" %>
-          <%= f.collection_select :state_id , State.all,:id,:state %>
+          <%= f.collection_select :state_id , State.all,:id,:state, {selected: 1} %>
         </div>
 
         <div class="row field d-grid text-center mt-3">
           <%= f.label :住所（地域エリア）, class: "col-md-4 text-left" %>
           <div id="areas_select" >
-            <%= render partial: 'shared/areas', locals: { areas: Area.all } %>
+            <%= render partial: 'shared/areas', locals: { areas: Area.where(state_id: 1) } %>
           </div>
         </div>
 
@@ -83,3 +83,9 @@
     </div>
   </div>
 </div>
+
+<script>
+  window.addEventListener('pageshow',()=>{
+  	if(window.performance.navigation.type==2) location.reload();
+  });
+</script>
