--- a/app/views/restaurant/registrations/new.html.erb
+++ b/app/views/restaurant/registrations/new.html.erb
@@ -18,14 +18,14 @@
 
         <div class="row field d-grid text-center mt-3">
           <%= f.label :店舗住所（都道府県）, class: "col-md-4 text-left" %>
-          <%= f.collection_select :state_id , State.all,:id,:state %>
+          <%= f.collection_select :state_id , State.all,:id,:state, {selected: 1} %>
         </div>
 
         <div class="row field d-grid text-center mt-3">
           <%= f.label :店舗住所（地域エリア）, class: "col-md-4 text-left" %>
           <%#= f.collection_select :area_id , get_areas,:id,:area %>
           <div id="areas_select" >
-            <%= render partial: 'shared/restaurant_areas', locals: { areas: Area.all } %>
+            <%= render partial: 'shared/restaurant_areas', locals: { areas: Area.where(state_id: 1) } %>
           </div>
         </div>
         <p class="mt-2", style="text-align:center;">
@@ -88,3 +88,9 @@
     </div>
   </div>
 </div>
+
+<script>
+  window.addEventListener('pageshow',()=>{
+  	if(window.performance.navigation.type==2) location.reload();
+  });
+</script>
