--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,3 +1,182 @@
 @import '~bootstrap/scss/bootstrap';
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
 
+// html {
+//   height: 100%;
+// }
+
+// body {
+//   margin: 0;
+//   padding: 0;
+//   min-height: 100%;
+//   display: flex;
+//   flex-direction: column;
+// }
+
+// .content {
+//   flex: 1;
+// }
+
+// h4, h6 {
+//   color: #6e4a55;
+//   border-radius: 4px;
+//   background-color: #bccddb ;
+// }
+
+// h1{
+//   color: maroon;
+// }
+
+// .about{
+//   color: maroon;
+// }
+
+// .table-secondary {
+//   background-color: #ffffe0 ;
+// }
+
+// th {
+//   color: #cd853f;
+// }
+
+// .navbar-expand-lg {
+//   height: 80px;
+//   background-image: url('navbar.jpeg');
+//   background-size:cover;
+//   background-position:center;
+// }
+
+// #global_nav .navbar-toggler{
+//   background-color: rgba(2, 100, 100, 1);
+//   border-color: rgba(0, 0, 0, 0);
+// }
+
+// #global_nav .navbar-brand{
+//   /* サイトタイトル */
+//   color: rgba(212, 108, 228, 1);
+// }
+
+// .wrapper{
+//   min-height: 100vh;
+//   position: relative;
+//   padding-bottom: 120px;
+//   box-sizing: border-box;
+//   background-color: #ede4e1;
+// }
+
+// footer {
+//   background-image: url('navbar.jpeg');
+//   background-size:cover;
+//   background-position:center;
+//   width: 100% ;
+//   color: white ;
+// }
+
+// .top_image{
+//   position: relative;
+//   z-index: 1;
+//   width: 100%;
+//   height: 400px;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   overflow: hidden;
+// }
+
+// .top_image::after {
+//   position: absolute;
+//   content: '';
+//   top: 0;
+//   bottom: 0;
+//   left: 0;
+//   right: 0;
+//   box-shadow: inset 0 0 10px 20px #ede4e1;
+// }
+
+// .top_image img {
+//   width: 150%;
+// }
+
+// .icon{
+//   border-radius: 5px;
+// }
+
+// .restaurant_contents{
+//   width: 300px;
+// }
+
+// .p_2{
+//   margin: 0;
+//   color: white;
+//   font-size: 85%;
+// }
+
+// .area_image{
+//   display: flex;
+//   justify-content: center;
+// }
+
+// .navbar{
+//   position: fixed;
+//   z-index: 2;
+// }
+
+// .lb-image{
+//   width: 100% !important;
+//   height: 100% !important;
+// }
+
+// .lb-outerContainer{
+//   width: 90% !important;
+//   height: 100% !important;
+// }
+
+// .customer_allergen{
+//   background-color: #dcd6d2;
+// }
+
+// input[type="checkbox"]{
+//   position: relative;
+//   transform: scale(2);
+// 	margin: 10px 20px 0 20px;
+// }
+
+// .allergies_check_boxes{
+//   text-align: left;
+//   margin-left: -15px;
+//   padding-left: 0 !important;
+// }
+
+// .menu_allergen{
+//   margin-bottom: 0;
+// }
+
+// .flashing{
+//   animation: blink 0.8s ease-in-out infinite alternate;
+//   color: red;
+// }
+
+// @keyframes blink{
+//   0%   {opacity: 0;}
+//   100% {opacity: 1;}
+// }
+
+// .restaurant_valid{
+//   color: gray;
+// }
+
+// .restaurant_valid2{
+//   color: green;
+// }
+
+// .valid{
+//   margin-top: 7px;
+// }
+
+// .customer_valid{
+//   color: gray;
+// }
+
+// .customer_valid2{
+//   color: green;
+// }
