--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all' %>
+    <%#= stylesheet_pack_tag 'application', media: 'all' %>
     <%= javascript_pack_tag 'application' %>
 
      <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">
@@ -16,9 +17,8 @@
 
   <div class="wrapper">
     <header>
-      <nav class="navbar navbar-expand-lg navbar-dark">
+      <nav class="navbar navbar-expand-lg navbar-dark" id="global_nav">
         <div class="container">
-
 
           <% if customer_signed_in? %>
             <a class="navbar-brand" href="/">
@@ -27,8 +27,8 @@
             <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="navbar-collapse collapse" id="navbarNavDropdown" style>
-              <ul class="navbar-nav ml-auto">
+            <div class="navbar-collapse collapse" id="navbarNavDropdown">
+              <ul class="navbar-nav ml-auto" id="nav_links", style="color: #800000;">
                 <li>
                   <%= link_to customers_my_page_path, class:"nav-link text-light" do %>
                     <strong>マイページ</strong>
