--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -47,13 +47,14 @@
 // }
 
 // #global_nav .navbar-toggler{
-//   background-color: rgba(2, 100, 100, 1);
+//   background-color: rgba( 152, 96, 54, 1);
 //   border-color: rgba(0, 0, 0, 0);
+//   border-color: rgba( 237, 228, 225, 1);
 // }
 
-// #global_nav .navbar-brand{
-//   /* サイトタイトル */
-//   color: rgba(212, 108, 228, 1);
+// .navbar-nav li a{
+//   color: #ede4e1 !important;
+//   background-color: rgba( 107, 63, 49, 0.7);
 // }
 
 // .wrapper{
