--- a/app/views/admin/areas/index.html.erb
+++ b/app/views/admin/areas/index.html.erb
@@ -16,8 +16,7 @@
             </tr>
           <% end %>
         </table>
-
-
+        <div class="offset-9 mt-3"><%= paginate @states %></div>
       </div>
     </div>
   </div>
