--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -30,9 +30,9 @@
               </td>
             </tr>
           <% end %>
-          <%= paginate @customers %>
         </tbody>
       </table>
+      <div class="offset-5 mt-3"><%= paginate @customers %></div>
     </div>
   </div>
 </div>
