--- a/app/views/admin/allergies/index.html.erb
+++ b/app/views/admin/allergies/index.html.erb
@@ -22,6 +22,7 @@
           <thead class="table-secondary">
             <th>アレルゲン</th>
             <th></th>
+            <th></th>
           </thead>
           <% @allergies.each do |allergy| %>
             <tr>
@@ -29,11 +30,15 @@
                 <%= allergy.allergen %>
               </td>
               <td>
-                <%= link_to "編集", edit_admin_allergy_path(allergy.id), class:"btn btn-success"%>
+                <%= link_to "編集", edit_admin_allergy_path(allergy), class:"btn btn-success"%>
+              </td>
+              <td>
+                <%= link_to "削除",admin_allergy_path(allergy), method: :delete,  class:"btn btn-danger active" %>
               </td>
             </tr>
           <% end %>
         </table>
+        <div class="offset-9 mt-3"><%= paginate @allergies %></div>
       </div>
     </div>
   </div>
