--- a/app/views/customer/restaurants/index.html.erb
+++ b/app/views/customer/restaurants/index.html.erb
@@ -31,6 +31,7 @@
             <% end %>
           </tbody>
         </table>
+        <!--<div class="offset-5 mt-3"><%#= paginate @restaurants_page %></div>-->
       </div>
     </div>
   </div>
