--- a/app/views/restaurant/menus/index.html.erb
+++ b/app/views/restaurant/menus/index.html.erb
@@ -40,7 +40,7 @@
           <% end %>
         </div>
 
-        <div class="mt-3"><%= paginate @menus %></div>
+        <div class="offset-5 mt-3"><%= paginate @menus %></div>
 
     </div>
   </div>
