Change error_messages of views/registration

--- a/app/views/customer/registrations/new.html.erb
+++ b/app/views/customer/registrations/new.html.erb
@@ -9,18 +9,18 @@
         <div class="row field d-grid text-center mt-3 mt-4">
           <span class="col-md-3 text-left">名前</span>
           <%= f.label :（姓）, class: "col-md-1" %>
-          <%= f.text_field :first_name, autofocus: true, required: true, class: "col-md-3" %>
+          <%= f.text_field :first_name, autofocus: true, class: "col-md-3" %>
           <%= f.label :（名）, class: "col-md-1" %>
-          <%= f.text_field :last_name, autofocus: true, required: true, class: "col-md-3" %>
+          <%= f.text_field :last_name, autofocus: true, class: "col-md-3" %>
         </div>
 
 
         <div class="row field d-grid text-center mt-3">
           <span class="col-md-3 text-left">フリガナ</span>
           <%= f.label :セイ, class: "col-md-1" %>
-          <%= f.text_field :first_name_kana, autofocus: true, required: true, class: "col-md-3" %>
+          <%= f.text_field :first_name_kana, autofocus: true, class: "col-md-3" %>
           <%= f.label :メイ, class: "col-md-1" %>
-          <%= f.text_field :last_name_kana, autofocus: true, required: true, class: "col-md-3" %>
+          <%= f.text_field :last_name_kana, autofocus: true, class: "col-md-3" %>
         </div>
 
         <div class="row field d-grid text-center mt-3">
