--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -77,7 +77,7 @@
                 </li>
                 <li>
                   <%= link_to admin_path, class:"nav-link text-light" do %>
-                    <strong>店舗一覧</strong>
+                    <strong>飲食店一覧</strong>
                   <% end %>
                 </li>
                 <li>
