--- a/app/views/restaurant/registrations/new.html.erb
+++ b/app/views/restaurant/registrations/new.html.erb
@@ -8,12 +8,12 @@
 
         <div class="row field d-grid text-center mt-3">
           <%= f.label :店名, class: "col-md-4 text-left" %>
-          <%= f.text_field :name, required: true, class: "col-md-3" %>
+          <%= f.text_field :name, class: "col-md-3" %>
         </div>
 
         <div class="row field d-grid text-center mt-3">
           <%= f.label :メールアドレス, class: "col-md-4 text-left" %>
-          <%= f.text_field :email, required: true, class: "col-md-3" %>
+          <%= f.text_field :email, class: "col-md-3" %>
         </div>
 
         <div class="row field d-grid text-center mt-3">
@@ -41,17 +41,17 @@
 
         <div class="row field d-grid text-center mt-3">
           <%= f.label :電話番号（ハイフンなし）, class: "col-md-4 text-left" %><br />
-          <%= f.text_field :telephone_number, required: true, class: "col-md-3" %>
+          <%= f.text_field :telephone_number, class: "col-md-3" %>
         </div>
 
         <div class="row field d-grid text-center mt-3">
           <%= f.label :定休日, class: "col-md-4 text-left" %>
-          <%= f.text_field :regular_holiday, required: true, class: "col-md-3" %>
+          <%= f.text_field :regular_holiday, class: "col-md-3" %>
         </div>
 
         <div class="row field d-grid text-center mt-3">
           <%= f.label :営業時間, class: "col-md-4 text-left" %>
-          <%= f.text_field :business_hours, required: true, class: "col-md-3" %>
+          <%= f.text_field :business_hours, class: "col-md-3" %>
         </div>
 
         <div class="row field d-grid text-center mt-3">
