--- a/app/views/admin/allergies/edit.html.erb
+++ b/app/views/admin/allergies/edit.html.erb
@@ -2,6 +2,11 @@
   <div class="row">
     <div class='col-12'>
       <h4 class="col-md-5 mt-5">アレルゲン編集</h4>
+      <% flash.each do |key, value| %>
+         <p class="alert alert-<%= key %>">
+           <%= value %>
+         </p>
+      <% end %>
 
 
       <div class="row">
