--- a/app/views/admin/allergies/index.html.erb
+++ b/app/views/admin/allergies/index.html.erb
@@ -2,7 +2,11 @@
   <div class="row">
     <div class='col-12'>
       <h4 class="col-3 mt-5">アレルゲン一覧・追加</h4>
-
+      <% flash.each do |key, value| %>
+         <p class="alert alert-<%= key %>">
+           <%= value %>
+         </p>
+      <% end %>
 
       <div class="row">
         <div class='col-md-7 mt-5'>
