--- a/app/views/admin/areas/index.html.erb
+++ b/app/views/admin/areas/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class='col-12'>
-      <h4 class="col-3 mt-5 offset-2">地域エリア一覧</h4>
+      <h4 class="col-3 mt-5 offset-2">地域一覧</h4>
 
       <div class="row">
         <table class="table table-hover col-8 mt-3 offset-2">
