--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,7 +1,8 @@
 <div class="container">
   <div class="row">
+
     <div class="col-10 offset-1">
-      <h4 class="col-2 mt-5">会員一覧</h4>
+      <h4 class="col-2 mt-5">顧客会員一覧</h4>
 
       <div class='flashing mt-2'>
         <p>※現在登録されているデータは架空です</p>
