--- a/app/views/restaurant/homes/top.html.erb
+++ b/app/views/restaurant/homes/top.html.erb
@@ -1,5 +1,5 @@
 <div class="container col-10 offset-1">
-  <h4 class="col-md-4 mt-5">店舗詳細</h4>
+  <h4 class="col-md-4 mt-5">登録情報詳細</h4>
 
   <div class='flashing mt-2'>
     <p>※現在登録されているデータは架空です</p>
@@ -92,7 +92,7 @@
         </div>
       </table>
     </div>
-    <div class= "col-6 mt-4">
+    <div class= "col-md-6 mt-4">
       <h5>NEWS</h5>
       <%= @restaurant.news %>
     </div>
