--- a/app/views/restaurant/registrations/new.html.erb
+++ b/app/views/restaurant/registrations/new.html.erb
@@ -8,7 +8,7 @@
 
         <div class="row field d-grid text-center mt-3">
           <%= f.label :店名, class: "col-md-4 text-left" %>
-          <%= f.text_field :name, class: "col-md-3" %>
+          <%= f.text_field :name, autofocus: true, class: "col-md-3" %>
         </div>
 
         <div class="row field d-grid text-center mt-3">
