--- a/app/views/customer/customers/confirm.html.erb
+++ b/app/views/customer/customers/confirm.html.erb
@@ -13,7 +13,7 @@
 
       <div class="text-center">
         <%#= link_to "退会しない", customers_my_page_path(@customer), class:"btn btn-primary"%>
-        <%= link_to customers_my_page_path(@customer), class:"btn btn-primary active ml-md-5 mt-4" do %>
+        <%= link_to customer_path(@customer), class:"btn btn-primary active ml-md-5 mt-4" do %>
           <i class="fas fa-user-circle"></i>
           退会しない
         <% end %>
