--- a/app/views/customer/menus/index.html.erb
+++ b/app/views/customer/menus/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-10 offset-1">
       <div class ="row mt-5">
-        <h4 class="col-md-3"><p class="p_1">検索結果<span style="font-size: 15px"><%= "(全#{@menu_count}件)"%></span></p></h4>
+        <h4 class="col-md-3"><p class="p_1">メニュー一覧<span style="font-size: 15px"><%= "(全#{@menu_count}件)"%></span></p></h4>
       </div>
 
       <div class='flashing mt-2'>
@@ -10,7 +10,6 @@
       </div>
 
       <div class = "row mt-4">
-        <h5>メニュー一覧</h5>
         <%= link_to restaurant_path(@restaurant), class:"btn btn-info active btn-sm ml-3" do %>
           <i class="fas fa-store-alt"></i>
           店舗詳細に戻る
