--- a/app/views/restaurant/homes/edit.html.erb
+++ b/app/views/restaurant/homes/edit.html.erb
@@ -22,7 +22,7 @@
 
           <div class="row field d-grid text-center mt-4">
             <%= f.label :店舗紹介文, class: "col-md-3 text-left" %>
-            <%= f.text_area :introduction, autofocus: true, required: true, class: "col-md-8" %>
+            <%= f.text_area :introduction, class: "col-md-8" %>
           </div>
 
           <div class="row field d-grid text-center mt-4">
@@ -47,42 +47,42 @@
 
           <div class="row field d-grid text-center mt-4">
             <%= f.label :それ以降の住所, class: "col-md-3 text-left" %>
-            <%= f.text_field :address, autofocus: true, required: true, class: "col-md-8" %>
+            <%= f.text_field :address, required: true, class: "col-md-8" %>
           </div>
 
           <div class="row field d-grid text-center mt-4">
             <%= f.label :電話番号（ハイフンなし）, class: "col-md-3 text-left" %>
-            <%= f.text_field :telephone_number, autofocus: true, class: "col-md-6" %>
+            <%= f.text_field :telephone_number, required: true, class: "col-md-6" %>
           </div>
 
           <div class="row field d-grid text-center mt-4">
             <%= f.label :メールアドレス, class: "col-md-3 text-left" %>
-            <%= f.email_field :email, autofocus: true, class: "col-md-6" %>
+            <%= f.email_field :email, required: true, class: "col-md-6" %>
           </div>
 
           <div class="row field d-grid text-center mt-4">
             <%= f.label :定休日, class: "col-md-3 text-left" %>
-            <%= f.text_field :regular_holiday, autofocus: true, class: "col-md-6" %>
+            <%= f.text_field :regular_holiday, required: true, class: "col-md-6" %>
           </div>
 
           <div class="row field d-grid text-center mt-4">
             <%= f.label :営業時間, class: "col-md-3 text-left" %>
-            <%= f.text_field :business_hours, autofocus: true, class: "col-md-6" %>
+            <%= f.text_field :business_hours, required: true, class: "col-md-6" %>
           </div>
 
           <div class="row field d-grid text-center mt-4">
             <%= f.label :ホームページURL, class: "col-md-3 text-left" %>
-            <%= f.text_field :home_page, autofocus: true, class: "col-md-6" %>
+            <%= f.text_field :home_page, class: "col-md-6" %>
           </div>
 
           <div class="row field d-grid text-center mt-4">
             <%= f.label :駐車場, class: "col-md-3 text-left" %>
-            <%= f.text_field :parking, autofocus: true, class: "col-md-6" %>
+            <%= f.text_field :parking, class: "col-md-6" %>
           </div>
 
           <div class="row field d-grid text-center mt-4">
             <%= f.label :News, class: "col-md-3 text-left" %>
-            <%= f.text_area :news, autofocus: true, class: "col-md-8" %>
+            <%= f.text_area :news, class: "col-md-8" %>
           </div>
 
           <div class="row field d-grid offset-md-3">
