--- a/app/views/restaurant/menus/edit.html.erb
+++ b/app/views/restaurant/menus/edit.html.erb
@@ -17,7 +17,7 @@
 
           <div class="row field d-grid text-center mt-3">
             <%= f.label :メニュー名, class: "col-md-4 text-left" %>
-            <%= f.text_field :name, class: "col-md-6" %>
+            <%= f.text_field :name, autofocus: true, required: true, class: "col-md-6" %>
           </div>
 
           <div class="row field d-grid text-center mt-3">
@@ -32,7 +32,7 @@
 
           <div class="row field d-grid text-center mt-3">
             <%= f.label :税抜価格, class: "col-md-4 text-left" %>
-            <%= f.text_field :price, class: "col-md-3" %>円
+            <%= f.text_field :price, required: true, class: "col-md-3" %>円
           </div>
 
           <div class="row field d-grid text-center mt-3">
