--- a/app/views/restaurant/menus/new.html.erb
+++ b/app/views/restaurant/menus/new.html.erb
@@ -22,7 +22,7 @@
 
         <div class="row field d-grid text-center mt-3">
           <%= f.label :メニュー名, class: "col-md-4 text-left" %>
-          <%= f.text_field :name, class: "col-md-6" %>
+          <%= f.text_field :name, autofocus: true, required: true, class: "col-md-6" %>
         </div>
 
         <div class="row field d-grid text-center mt-3">
@@ -38,8 +38,8 @@
 
         <div class="row field d-grid text-center mt-3">
           <%= f.label :税抜価格, class: "col-md-4 text-left" %>
-          <%= f.text_field :price, class: "col-md-3" %>
-          <p class="text-center ml-2">円</p>
+          <%= f.text_field :price, required: true, class: "col-md-3" %>
+          <p class="ml-2">円</p>
         </div>
 
         <div class="row field d-grid text-center mt-3">
