--- a/app/views/restaurant/menus/show.html.erb
+++ b/app/views/restaurant/menus/show.html.erb
@@ -37,7 +37,7 @@
               <i class="fas fa-pen-nib"></i>
               編集する
             <% end %>
-            <%= link_to restaurant_restaurant_menu_path(@restaurant, @menu), method: :delete,  class:"btn btn-danger active ml-md-5 mt-5" do %>
+            <%= link_to restaurant_restaurant_menu_path(@restaurant, @menu), method: :delete,"data-confirm" => "本当に削除しますか？",  class:"btn btn-danger active ml-md-5 mt-5" do %>
               <i class="fas fa-trash"></i>
               削除する
             <% end %>
